--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+/*  classi utili */
+.h-100 {
+    height: 100px;
+} 
+/* reset */
 * {
     box-sizing: border-box;
     margin: 0;
@@ -63,4 +68,24 @@ nav ul li {
     top: 25%;
     left: 25%;
     transform: translate(-50%, 50%);
+}
+
+/* section-banner */
+.banner-sec-grey {
+    background-color: rgb(211, 211, 211);
+}
+
+.message {
+    text-align: center;
+}
+
+/* row n.3 */
+.column-3 {
+    width: 30%;
+    padding: 50px 0;
+    background-color: red;
+    border: 1px solid black;
+}
+.col-center {
+    margin: 0 5%;
 }
