--- a/style.css
+++ b/style.css
@@ -82,12 +82,24 @@ nav ul li {
 /* row n.3 colonne:3 */
 .column-3 {
     width: 30%;
-    padding: 50px 0;
-    background-color: red;
     border: 1px solid black;
+    height: 400px;
 }
 .col-center {
     margin: 0 5%;
+}
+.img-content {
+    width: 100px;
+    height: 100px;
+    margin: auto;
+}
+.img-content img {
+    width: 100%;
+    height: 100%;
+}
+
+.informative-text {
+    text-align: center;
 }
 
 /* row n4 colonne:2  */
