--- a/style.css
+++ b/style.css
@@ -106,10 +106,21 @@ nav ul li {
 .column-2 {
     width: 45%;
     padding: 50px 0;
-    background-color: red;
     border: 1px solid black;
 }
 
 div.column-2:nth-of-type(1) {
     margin-right: 5%;
+}
+
+.img-mountain {
+    width: 300px;
+    height: 300px;
+    margin: auto;
+}
+
+
+.img-mountain img {
+    width: 100%;
+    height: 100%;
 }
