--- a/style.css
+++ b/style.css
@@ -9,13 +9,17 @@
     padding: 0;
 }
 /* position fixed */
-.help-click {
+
+.chat-help {
+    z-index: 1;
     position: fixed;
-    display: block;
     width: 50px;
     height: 50px;
-    z-index: 1;
+    bottom: 0;
+    right: 10%;
 }
+
+/*  */
 
 .sec-centered {
     max-width: 1660px;
