--- a/style.css
+++ b/style.css
@@ -136,8 +136,9 @@ div.message p {
 /* row n.3 colonne:3 */
 .column-3 {
     width: 30%;
-    border: 1px solid black;
-    height: 400px;
+    /* border: 1px solid black; */
+    /* height: 400px; */
+    padding: 20px 10px;
 }
 .col-center {
     margin: 0 5%;
@@ -155,6 +156,27 @@ div.message p {
 .informative-text {
     text-align: center;
 }
+.informative-text p {
+    color: rgb(123, 123, 123);
+}
+
+h2.color-text-green {
+    color: rgb(124, 187, 2);
+    font-size: 35px;
+    margin: 15px 0;
+}
+.hr-special {
+    padding: 20px 0;
+}
+.hr-special > hr {
+    text-align: center;
+    background-color:gray;
+    width: 20%;
+    margin:0 auto;
+    
+}
+
+
 
 /* row n4 colonne:2  */
 .column-2 {
