--- a/style.css
+++ b/style.css
@@ -173,30 +173,48 @@ h2.color-text-green {
     background-color:gray;
     width: 20%;
     margin:0 auto;
-    
+}
+.row {
+    margin-bottom: 50px;
 }
 
+#full-hr {
+    background-color:lightgrey;
+    margin-bottom: 20px;
+}
 
 
 /* row n4 colonne:2  */
 .column-2 {
     width: 45%;
     padding: 50px 0;
-    border: 1px solid black;
 }
 
 div.column-2:nth-of-type(1) {
     margin-right: 5%;
 }
 
-.img-mountain {
-    width: 300px;
-    height: 300px;
-    margin: auto;
-}
-
 
 .img-mountain img {
-    width: 100%;
-    height: 100%;
+    width: 70%;
+    height: 70%;
+    margin: auto; 
+    display: block;
+}
+
+.description-placement {
+    width: 90%;
+}
+
+.description-placement h2 {
+    font-size: 30px;
+    margin-bottom: 20px;
+}
+.description-placement p {
+    color: rgb(123, 123, 123);
+    margin-bottom: 20px;
+}
+
+div.ctas a {
+    color: rgb(129, 165, 205);
 }
